# pydough-ce

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pytest.ini
dspy_pydough_pipeline_parallel/: .gitignore  download_bird_database.sh  environment.yml  main.py  readme.md
dspy_pydough_pipeline_parallel/data/prompts/: cheatsheet_8_1.md
dspy_pydough_pipeline_parallel/data/questions/: bird_30.csv
dspy_pydough_pipeline_parallel/evaluation/: eval.py  prompt_evaluation.py
dspy_pydough_pipeline_parallel/predictors/: gradio_predictor.py  predictor.py  pydough_ensemble.py  question_prediction.py
dspy_pydough_pipeline_parallel/predictors/ensembles/: _init_.py  density.py  frequency.py  heuristics.py  random.py  size.py
dspy_pydough_pipeline_parallel/utils/: generate_markdown.py  utils.py
dspy_pydough_pipeline_parallel/utils/caching/: sqlite_cache.py
dspy_pydough_pipeline_parallel/utils/helpers/: mlflow_tracking.py  pydough_helper.py
metadata/: analytics.json  analytics.md  live_pg.json  live_pg.md  live_sales.json  live_sales.md  pagila.json  pagila.md  tpch.json  tpch.md
pydough-analytics/: LICENSE  README.md  pyproject.toml  setup_tpch.sh
pydough-analytics/data/metadata/: Dealership_graph.json  DermTreatment_graph.json  Ewallet_graph.json  Tpch_graph.json
pydough-analytics/data/metadata_markdowns/: Dealership.md  DermTreatment.md  Ewallet.md  Tpch.md
pydough-analytics/data/prompts/: cheatsheet.md  prompt.md  suggest_query_prompt.md
pydough-analytics/docs/: pydough-prompt-guide.md  quickstart.md
pydough-analytics/samples/: llm_demo.ipynb
pydough-analytics/src/pydough_analytics/: __main__.py  cli.py
pydough-analytics/src/pydough_analytics/commands/: ask_cmd.py  generate_json_cmd.py  generate_md_cmd.py
pydough-analytics/src/pydough_analytics/config/: env.py
pydough-analytics/src/pydough_analytics/data/metadata/: Broker_graph.json  Dealership_graph.json  Tpch_graph.json
pydough-analytics/src/pydough_analytics/data/metadata_markdowns/: Broker.md  Dealership.md
pydough-analytics/src/pydough_analytics/llm/: ai_providers.py  client.py  llm_client.py
pydough-analytics/src/pydough_analytics/llm/.ipynb_checkpoints/: llm_demo-checkpoint.ipynb
pydough-analytics/src/pydough_analytics/mcp/: README_MCP.md  __init__.py  mcp_entry.py  server.py
pydough-analytics/src/pydough_analytics/metadata/: connector.py  generate_json.py  generate_knowledge_graph.py  generate_mark_down.py  generate_md.py  generator.py  metadata_constants.py
pydough-analytics/src/pydough_analytics/pipeline/: analytics.py
pydough-analytics/src/pydough_analytics/prompting/: builder.py  config.py  guide.py  markdown.py  schema.py  summary.py
pydough-analytics/src/pydough_analytics/runtime/: executor.py
pydough-analytics/src/pydough_analytics/utils/: factory.py  local_storage.py  utils.py
pydough-analytics/src/pydough_analytics/utils/database_connectors/: connection_parser.py  connector.py
pydough-analytics/src/pydough_analytics/utils/storage/: base.py  factory.py  file_service.py  local_storage.py
pydough-analytics/test/: conftest.py  test_cli.py  test_generate_json.py  test_generate_knowledge_graph.py  test_generate_md.py
pydough-analytics/tests/: conftest.py  test_ai_providers.py  test_analytics_engine.py  test_ask_cmd.py  test_cli.py  test_generate_json.py  test_generate_mark_down.py  test_integration_live.py  test_llm_client.py  test_mcp_server.py  test_metadata_generator.py  test_natural_language_general_live.py  test_natural_language_grouped_live.py  test_natural_language_live.py  test_natural_language_suite_live.py  test_prompt_builder.py
(+138 files in other folders)
