[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydough-analytics"
version = "0.1.0"
description = "Text-to-analytics toolkit built on PyDough"
readme = "README.md"
authors = [{name = "Bodo.ai"}]
license = "Apache-2.0"
requires-python = ">=3.10,<3.14"

# Core dependencies
dependencies = [
  # Core
  "pydough>=1.0.10",
  "SQLAlchemy>=2.0.41",
  "python-dotenv>=1.1.0",

  # LLM + AI providers
  "google-genai>=1.2.0",
  "anthropic>=0.67.0",
  "aisuite>=0.1.11",

  # Utilities
  "typer>=0.19.0",
  "rich>=14.0.0",

  # Cloud
  "boto3>=1.38.37",

  # Database connectors
  "snowflake-sqlalchemy>=1.7.6",
  "snowflake-connector-python[pandas]>=3.15.0",
  "mysql-connector-python>=9.4.0",
  "psycopg2-binary>=2.9.10",

  # Networking libraries
  "httpx>=0.27.2",
  "docstring-parser>=0.14.1"
]

# Optional dependencies
[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-mock>=3.15.0",
]
notebooks = [
  "jupyterlab>=4.4.0",
  "ipykernel>=6.30.0",
  "matplotlib>=0.1.7"
]
mcp = [
  "fastmcp>=0.4.0"
]

[project.urls]
Repository = "https://github.com/bodo-ai/pydough-ce"

[project.scripts]
pydough-analytics = "pydough_analytics.cli:app"
pydough-analytics-mcp = "pydough_analytics.mcp.mcp_entry:main"

[tool.typer]
auto_envvar_prefix = "PYDOUGH_ANALYTICS"

[tool.hatch.build.targets.sdist]
include = ["src/pydough_analytics", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["src/pydough_analytics"]